--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -1,9 +1,14 @@
 extends ../_template
 
 block variables
-  - var title = 'Home page'
+  - var title = 'Clown'
   - var url_js = "app/js/app.js"
   - var url_css = "app/css/app.css"
 
 block content
-  include ../common/_greating
+  // Блок header
+  include ../section/_header
+  // Конец header
+  // Блок about
+  include ../section/_about
+  // Конец about
