--- a/source/template/section/_about.pug
+++ b/source/template/section/_about.pug
@@ -5,8 +5,8 @@ section.about
     p.about__text В 2013 году неравнодушные, инициативные и талантливые люди объединились в творческую команду. Нас объединяет желание помогать детям, подросткам, молодежи и людям старшего возраста, которые оказались в трудных жизненных обстоятельствах.
     .about__list
       .about__item
-        img(src="app/img/about/about__1.jpg" alt="Мы креативные")
+        img.about__img(src="app/img/about/about__1.jpg" alt="Мы креативные")
       .about__item
-        img(src="app/img/about/about__2.jpg" alt="Мы креативные")
+        img.about__img(src="app/img/about/about__2.jpg" alt="Мы креативные")
       .about__item
-        img(src="app/img/about/about__3.jpg" alt="Мы креативные")
+        img.about__img(src="app/img/about/about__3.jpg" alt="Мы креативные")
