--- a/source/style/section/about.scss
+++ b/source/style/section/about.scss
@@ -14,8 +14,28 @@
 .about__text {
 	width: 80%;
 	margin: 0 auto 80px;
+	font-size: 15px;
 }
 
 .about__list {
 	display: flex;
+	justify-content: space-between;
+}
+
+.about__item {
+	position: relative;
+	overflow: hidden;
+	&:before {
+		content: "";
+		display: block;
+		width: 100%;
+		height: 100%;
+		background-image: linear-gradient(to bottom, $mainColor, $accentColor);
+		position: absolute;
+		bottom: 100%;
+		left: 0;
+	}
+}
+.about__image {
+	max-width: 100%;
 }
