--- a/source/template/section/_header.pug
+++ b/source/template/section/_header.pug
@@ -1,6 +1,6 @@
 section.header
   .container
-    .header__top
+    .header__top.wow.slideInDown
       .header__logo
         .logo
           +icon('logo')
@@ -20,7 +20,7 @@ section.header
       span.header__title Мы дарим
         br
         | радость
-      button.btn.btn--fill О нас
+      button.btn.btn--fill.wow.bounceIn О нас
     .header__bottom
       .timer
         ul.timer__list
