--- a/source/style/section/about.scss
+++ b/source/style/section/about.scss
@@ -25,15 +25,26 @@
 .about__item {
 	position: relative;
 	overflow: hidden;
+	transition: all .2s linear;
+	height: 250px;
 	&:before {
 		content: "";
 		display: block;
 		width: 100%;
 		height: 100%;
 		background-image: linear-gradient(to bottom, $mainColor, $accentColor);
+		opacity: 0.8;
 		position: absolute;
 		bottom: 100%;
 		left: 0;
+		transition: bottom .2s linear;
+	}
+	&:hover {
+		transform: translate(-10px, -10px);
+		box-shadow: 10px 10px 0px 0px rgba(149,225,211,1);
+		&:before {
+			bottom: 0%;
+		}
 	}
 }
 .about__image {
