--- a/source/template/section/_about.pug
+++ b/source/template/section/_about.pug
@@ -1,9 +1,10 @@
 section.about
   .container
-    span.subtitle.about__subtitle Кто мы такие?
-    h3.title.about__title Немного о нас
+    .about__block.wow.fadeIn(data-wow-duration="2s")
+      span.subtitle.about__subtitle Кто мы такие?
+      h3.title.about__title Немного о нас
     p.about__text В 2013 году неравнодушные, инициативные и талантливые люди объединились в творческую команду. Нас объединяет желание помогать детям, подросткам, молодежи и людям старшего возраста, которые оказались в трудных жизненных обстоятельствах.
-    .about__list
+    .about__list.wow.slideInUp
       .about__item
         img.about__img(src="app/img/about/about__1.jpg" alt="Мы креативные")
       .about__item
