--- a/source/style/base/var.scss
+++ b/source/style/base/var.scss
@@ -4,6 +4,7 @@
 
 $mainFont: "OpenSans", sans-serif;
 $boldFont: "OpenSansBold", sans-serif;
+$extraBoldFont: "OpenSansExtraBold", sans-serif;
 $italicFont: "OpenSansItalic", sans-serif;
 $introFont: "Intro", sans-serif;
 $introScriptFont: "IntroScript", sans-serif;
