--- a/source/style/common/btn.scss
+++ b/source/style/common/btn.scss
@@ -12,7 +12,7 @@
 	text-transform: uppercase;
 	cursor: pointer;
 	overflow: hidden;
-	transition: all .2s linear;
+	@extend .trs;
 	z-index: 1;
 	&:before, &:after {
 		content: "";
@@ -23,7 +23,8 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		transition: all .3s linear;
+		@extend .trs;
+		transition-delay: .1s;
 		z-index: -1;
 	}
 	&:before {
@@ -58,6 +59,7 @@
 	background: white;
 	border: none;
 	font-size: 28px;
+	font-family: $extraBoldFont;
 	border-radius: 30px;
 	&:after,&:before {
 		background: rgba(255,255,255,0.1);
