--- a/source/template/section/_about.pug
+++ b/source/template/section/_about.pug
@@ -7,7 +7,19 @@ section.about
     .about__list.wow.slideInUp
       .about__item
         img.about__img(src="app/img/about/about__1.jpg" alt="Мы креативные")
+        .about__info
+          .about__icon
+            +icon('creative')
+          span.about__descr Мы креативные
       .about__item
         img.about__img(src="app/img/about/about__2.jpg" alt="Мы креативные")
+        .about__info
+          .about__icon
+            +icon('creative')
+          span.about__descr Мы креативные
       .about__item
         img.about__img(src="app/img/about/about__3.jpg" alt="Мы креативные")
+        .about__info
+          .about__icon
+            +icon('creative')
+          span.about__descr Мы креативные
