--- a/source/template/section/_header.pug
+++ b/source/template/section/_header.pug
@@ -20,7 +20,7 @@ section.header
       span.header__title Мы дарим
         br
         | радость
-      button.btn.btn--fill.wow.bounceIn О нас
+      button.btn.btn--fill.wow.bounceIn(data-wow-duration="2s") О нас
     .header__bottom
       .timer
         ul.timer__list
