--- a/source/style/base/fonts.scss
+++ b/source/style/base/fonts.scss
@@ -15,6 +15,13 @@
 }
 
 @font-face {
+	font-family: "OpenSansExtraBold";
+	src: url("../fonts/OpenSans-ExtraBold.ttf") format("truetype");
+	font-style: normal;
+	font-weight: normal;
+}
+
+@font-face {
 	font-family: "OpenSansItalic";
 	src: url("../fonts/OpenSans-Italic.ttf") format("truetype");
 	font-style: normal;
