--- a/source/style/common/timer.scss
+++ b/source/style/common/timer.scss
@@ -5,6 +5,15 @@
 
 .timer__block {
 	width: 23%;
+	cursor: pointer;
+	&:hover {
+		.timer__load {
+			background: rgba(255,255,255,0.7);
+		}
+		.timer__counter {
+			opacity: 0.7;
+		}
+	}
 }
 
 .timer__load {
@@ -12,15 +21,19 @@
 	height: 3px;
 	background: rgba(255,255,255,0.5);
 	margin-bottom: 14px;
+	@extend .trs;
 }
 
 .timer__counter {
 	color: white;
 	text-transform: uppercase;
 	font-size: 20px;
-	opacity: 0;
+	opacity: 0.5;
+	font-family: $boldFont;
+	@extend .trs;
 	strong {
 		font-size: 24px;
+		font-family: $extraBoldFont;
 	}
 }
 
@@ -40,6 +53,14 @@
 	}
 	.timer__counter {
 		opacity: 1;
+	}
+	&:hover {
+		.timer__load {
+			background: white;
+		}
+		.timer__counter {
+			opacity: 1;
+		}
 	}
 }
 
