--- a/source/style/section/header.scss
+++ b/source/style/section/header.scss
@@ -2,13 +2,15 @@
 	padding: 40px 0 25px;
 	background: url(../img/bg-header.jpg) center no-repeat;
 	background-size: cover;
+	height: 100vh;
+	min-height: 800px;
 }
 
 .header__top {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 130px;
+	margin-bottom: 4%;
 }
 
 .header__logo {
@@ -31,14 +33,14 @@
 
 .header__middle {
 	text-align: center;
-	margin-bottom: 140px;
+	margin-bottom: 6%;
 }
 
 .header__subtitle {
 	font-family: $introScriptFont;
 	font-size: 72px;
 	color: white;
-	margin: 0 0 50px;
+	margin: 0 0 2%;
 }
 
 .header__title {
@@ -48,7 +50,7 @@
 	font-size: 150px;
 	font-family: $introFont;
 	padding-bottom: 40px;
-	margin-bottom: 40px;
+	margin-bottom: 2%;
 	&:after {
 		content: "";
 		display: block;
