add number section

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -25,6 +25,10 @@
 @import 'section/about';
 /* Конец секции about */
 
+/* Стили секции number */
+@import 'section/number';
+/* Конец секции number */
+
 
 
 
