--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -12,3 +12,6 @@ block content
   // Блок about
   include ../section/_about
   // Конец about
+  // Блок number
+  include ../section/_number
+  // Конец number
