--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -15,3 +15,12 @@ block content
   // Блок number
   include ../section/_number
   // Конец number
+  // Блок project
+  include ../section/_project
+  // Конец project
+  // Блок social
+  include ../section/_social
+  // Конец social
+  // Блок comment
+  include ../section/_comment
+  // Конец comment
