--- a/source/template/section/_header.pug
+++ b/source/template/section/_header.pug
@@ -8,11 +8,11 @@ section.header
         nav.menu
           ul.menu__list
             li.menu__item
-              a.menu__link(href="#") О нас
+              a.menu__link(href="#about") О нас
             li.menu__item
-              a.menu__link(href="#") Проекты
+              a.menu__link(href="#project") Проекты
             li.menu__item
-              a.menu__link(href="#") Мы в сети
+              a.menu__link(href="#social") Мы в сети
       div.header__donat
         button.btn.btn--white Пожертвовать
     .header__middle
