--- a/source/style/section/header.scss
+++ b/source/style/section/header.scss
@@ -4,6 +4,23 @@
 	background-size: cover;
 	height: 100vh;
 	min-height: 800px;
+	position: relative;
+	&:after {
+		content: "";
+		display: block;
+		width: 100%;
+		height: 100%;
+		opacity: 0.9;
+		background-image: linear-gradient(to top, $accentColor, $mainColor);
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
+	}
+	.container {
+		position: relative;
+		z-index: 2;
+	}
 }
 
 .header__top {
