--- a/source/style/common/slider.scss
+++ b/source/style/common/slider.scss
@@ -27,11 +27,13 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
+	opacity: 0;
 	@extend .trs;
 	transition-duration: .5s;
 }
 .display__item--active {
 	left: 0;
+	opacity: 1;
 }
 
 .display__photo {
@@ -58,6 +60,7 @@
 	align-items: center;
 	justify-content: flex-end;
 	width: 100%;
+	padding-right: 10px;
 	color: $titleColor;
 	&:before {
 		content: "";
@@ -114,6 +117,11 @@
 			transform: translate(70%, 50%) rotate(-90deg);
 		}
 	}
+}
+
+.slider__controls--disabled {
+	opacity: 0;
+	cursor: default;
 }
 
 .users {
