--- a/source/template/section/_social.pug
+++ b/source/template/section/_social.pug
@@ -6,6 +6,6 @@ section.social(data-article="social")
         br
         | в социальных сетях
     a.social__link(href="#")
-      img.social__ipad(src="app/img/social/social__ipad.png" alt="Фото ВК")
+      +icon('vk')
     .social__iphone(data-wow-delay="1s").wow.bounceInRight
       img(src="app/img/social/social__iphone.png" alt="Фото в Iphone")
