--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -41,6 +41,10 @@
 @import 'section/comment';
 /* Конец секции comment */
 
+/* Стили секции donat */
+@import 'section/donat';
+/* Конец секции donat */
+
 
 
 
