--- a/source/style/section/social.scss
+++ b/source/style/section/social.scss
@@ -37,6 +37,8 @@
 	margin: 0 auto;
 	.icon--vk {
 		margin: auto;
+		width: 130px;
+		height: 130px;
 		fill: white;
 		z-index: 5;
 		position: relative;
