--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -24,3 +24,6 @@ block content
   // Блок comment
   include ../section/_comment
   // Конец comment
+  // Блок donat
+  include ../section/_donat
+  // Конец donat
