--- a/source/style/common/btn.scss
+++ b/source/style/common/btn.scss
@@ -77,3 +77,31 @@
 		}
 	}
 }
+
+
+.btn--donat {
+	width: 340px;
+	height: 90px;
+	border-radius: 50px;
+	background: $accentColor;
+	color: black;
+	font-size: 24px;
+	&:after,&:before {
+		background: black;
+		width: 400px;
+		height: 400px;
+	}
+	&:before {
+		transform: translate(-300px, -370px) rotate(45deg);
+	}
+	&:after {
+		transform: translate(300px, -10px) rotate(45deg);
+	}
+	&:hover {
+		color: $accentColor;
+		border-color: black;
+		&:after {
+			transform: translate(-40px, -80px) rotate(45deg);
+		}
+	}
+}
