--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -45,6 +45,10 @@
 @import 'section/donat';
 /* Конец секции donat */
 
+/* Стили секции footer */
+@import 'section/footer';
+/* Конец секции footer */
+
 
 
 
