--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -27,3 +27,6 @@ block content
   // Блок donat
   include ../section/_donat
   // Конец donat
+  // Блок footer
+  include ../section/_footer
+  // Конец footer
