--- a/source/style/section/project.scss
+++ b/source/style/section/project.scss
@@ -79,8 +79,13 @@
 .project__text {
 	margin-bottom: 35px;
 	line-height: 24px;
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
-
+.project__text--js {
+	display: none;
+}
 .project__text--italic {
 	font-family: $italicFont;
 }
@@ -98,5 +103,10 @@
 		.icon--arrow {
 			fill: white;
 		}
+	}
+}
+.project__button--active {
+	.icon--arrow {
+		transform: rotate(180deg);
 	}
 }
