--- a/source/template/section/_project.pug
+++ b/source/template/section/_project.pug
@@ -13,6 +13,7 @@ section.project(data-article="project")
           p.project__text.project__text--italic “Юмор и смех – лекарство для всех.”
           p.project__text Больничная клоунада – специальная программа для госпиталей и медицинских центров. Клоуны, прошедшие специальное обучение, посещают палаты и общаются с пациентами.
           p.project__text Это помогает лечению и снижает стресс пациентов, поддерживает персонал и родственников пациентов. Позитивная сила надежды и юмора удивительно мотивирует к выздоровлению.
+          p.project__text.project__text--js Еще немного текста который будет показывать при разворачивании, так что его надо дописать а то как-то не так будет, ну можно и так оставить, но всё равно надо сказать об этом
           button.btn.project__button Развернуть
             +icon('arrow')
   .project__wrap--gray
@@ -26,6 +27,7 @@ section.project(data-article="project")
             span реабилитационными центрами
           p.project__text Наши клоуны с большим волнением и тщательностью готовятся к спектаклям. А какое волнение перед каждым показом! Каждое Рождество мы дарим деткам добрый спектакль, который укрепляет веру в чудо. В 2017 году, например, это была сказка о приключениях Буратино.
           p.project__text В реабилитационном центре «Я вижу сердцем» (пгт Лаишево) мы показали спектакль «Что такое зима?». Наши зрители были главными актерами и волшебниками.
+          p.project__text.project__text--js Еще немного текста который будет показывать при разворачивании, так что его надо дописать а то как-то не так будет, ну можно и так оставить, но всё равно надо сказать об этом
           button.btn.project__button Развернуть
             +icon('arrow')
   .project__wrap
@@ -38,6 +40,7 @@ section.project(data-article="project")
           h2.project__name Благотворительные фестивали
           p.project__text Городской инклюзивный фестиваль «Чемодан чудес» - наш крупный проект, которым мы гордимся. Первый семейный праздник  состоялся летом 2013 года. Сегодня с нами сотрудничают более 30 партнеров, поддерживают администрация Набережных Челнов и Камский детский медицинский центр.
           p.project__text Наш «Чемодан чудес» - это праздник детства, который воспитывает доброту и умение жить в гармонии. Это мероприятие помогает формировать толерантное отношение общества к семьям, воспитывающим детей с ограниченными возможностями.
+          p.project__text.project__text--js Еще немного текста который будет показывать при разворачивании, так что его надо дописать а то как-то не так будет, ну можно и так оставить, но всё равно надо сказать об этом
           button.btn.project__button Развернуть
             +icon('arrow')
   .project__wrap--gray
@@ -51,6 +54,7 @@ section.project(data-article="project")
           span Молодежный благотворительный театр
           p.project__text Появился в 2005 году. Наши зрители - воспитанники детских домов и реабилитационных центров.  Актерский состав сложился из неравнодушных молодых людей – школьников старших классов, студентов и выпускников.
           p.project__text Появился в 2005 году. Наши зрители - воспитанники детских домов и реабилитационных центров.  Актерский состав сложился из неравнодушных молодых людей – школьников старших классов, студентов и выпускников.
+          p.project__text.project__text--js Еще немного текста который будет показывать при разворачивании, так что его надо дописать а то как-то не так будет, ну можно и так оставить, но всё равно надо сказать об этом
           button.btn.project__button Развернуть
             +icon('arrow')
   .project__wrap
@@ -63,5 +67,6 @@ section.project(data-article="project")
           h2.project__name Инклюзивный театр «Проснись»
           p.project__text В 2014 году появилась идея его создания и были организованы уроки театрального искусства для детей с ограниченными возможностями. В 2015 году появилась первая группа «особенных» детей-актеров. 
           p.project__text  «Наша цель: дать детям возможность проявить себя, выйти из дома и делать что-то волшебно-необычное, а здоровым ребятам проявлять заботу, учиться помогать и общаться, не обращая внимания на физические различия, а открывая сердце» – Кузнецова Ирина, педагог и режиссер театра.
+          p.project__text.project__text--js Еще немного текста который будет показывать при разворачивании, так что его надо дописать а то как-то не так будет, ну можно и так оставить, но всё равно надо сказать об этом
           button.btn.project__button Развернуть
             +icon('arrow')
