add slider for header

--- a/source/style/section/header.scss
+++ b/source/style/section/header.scss
@@ -1,6 +1,7 @@
 .header {
 	padding: 40px 0 25px;
-	background: url(../img/bg-header.jpg) center no-repeat;
+	background-position: center;
+	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100vh;
 	min-height: 800px;
