--- a/source/template/section/_header.pug
+++ b/source/template/section/_header.pug
@@ -1,4 +1,4 @@
-section.header
+section.header(style="background-image: url('app/img/header/header__1.jpg')")
   .container
     .header__top.wow.slideInDown
       .header__logo
