--- a/source/style/section/project.scss
+++ b/source/style/section/project.scss
@@ -8,12 +8,15 @@
 
 .project__wrap--gray {
 	background: #f8f8f8;
+	position: relative;
+	z-index: -2;
 	.project__item {
 		flex-direction: row-reverse;
 	}
 	.project__photo {
+		text-align: left;
 		&:before {
-			transform: translate(15px, -32px) rotate(-2deg);
+			transform: translate(10px, -25px) rotate(-2deg);
 		}
 	}
 }
@@ -26,30 +29,29 @@
 }
 
 .project__photo {
-	width: 47.5%;
+	width: 50%;
 	position: relative;
+	text-align: right;
 	img {
 		max-width: 100%;
 		position: relative;
-		z-index: 2;
 	}
 	&:before {
 		content: "";
 		display: block;
 		position: absolute;
-		width: 100%;
-		height: 100%;
+		width: 95%;
+		height: 95%;
 		border: 5px solid #f6ce8c;
-		z-index: 1;
-		transform: translate(-25px, -30px) rotate(-2deg);
+		z-index: -1;
+		transform: translate(10px, -30px) rotate(-2deg);
 	}
 }
 
 .project__descr {
-	width: 47.5%;
+	width: 50%;
 	position: relative;
-	padding-top: 10px;
-	z-index: 10;
+	padding: 10px 20px;
 }
 
 .project__counter {
@@ -59,8 +61,7 @@
 	font-size: 100px;
 	position: absolute;
 	top: -25px;
-	left: -10px;
-	z-index: 2;
+	left: 5px;
 }
 
 .project__name {
@@ -70,7 +71,6 @@
 	margin-bottom: 45px;
 	text-transform: uppercase;
 	position: relative;
-	z-index: 3;
 	span {
 		font-size: 20px;
 	}
