--- a/source/template/section/_about.pug
+++ b/source/template/section/_about.pug
@@ -1,4 +1,4 @@
-section.about(data-article="about")
+section.about(data-article="about").js-menu
   .container
     .about__block.wow.fadeIn(data-wow-duration="2s")
       span.subtitle.about__subtitle Кто мы такие?
