--- a/source/template/section/_comment.pug
+++ b/source/template/section/_comment.pug
@@ -1,4 +1,4 @@
-.comment
+section.comment(data-article="comment").js-menu
   .container
     .comment__block.wow.fadeIn(data-wow-duration="2s")
       span.subtitle.comment__subtitle О нас говорят
