--- a/source/template/section/_project.pug
+++ b/source/template/section/_project.pug
@@ -1,4 +1,4 @@
-section.project(data-article="project")
+section.project(data-article="project").js-menu
   .project__block.wow.fadeIn(data-wow-duration="2s")
     span.subtitle.project__subtitle Кто мы такие?
     h3.title.project__title Наши проекты
