--- a/source/template/section/_social.pug
+++ b/source/template/section/_social.pug
@@ -1,4 +1,4 @@
-section.social(data-article="social")
+section.social(data-article="social").js-menu
   .container
     .social__block.wow.fadeIn(data-wow-duration="2s")
       span.subtitle.about__subtitle Не упусти интересное
