--- a/source/style/base/base.scss
+++ b/source/style/base/base.scss
@@ -7,11 +7,20 @@
 	box-sizing: border-box;
 }
 
-body {
+html, body {
 	font-size: 15px;
 	font-family: $mainFont;
 	color: $textColor;
 	line-height: 1;
+	@media (max-width:1200px) {
+		font-size: 14px;
+	}
+	@media (max-width: 700px) {
+		font-size: 13px;
+	}
+	@media (max-width: 320px) {
+		font-size: 12px;
+	}
 }
 
 ul {
@@ -37,7 +46,7 @@ button {
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
-	@media (max-width: 1230px) {
+	@media (max-width: 1200px) {
 		padding: 0 10px;
 	}
 }
