--- a/source/style/common/btn.scss
+++ b/source/style/common/btn.scss
@@ -76,6 +76,11 @@
 			transform: translate(25px, -75px) rotate(45deg);
 		}
 	}
+	@media (max-width: 700px) {
+		width: 200px;
+		height: 40px;
+		font-size: 20px;
+	}
 }
 
 
@@ -103,5 +108,9 @@
 		&:after {
 			transform: translate(-40px, -80px) rotate(45deg);
 		}
+	}
+	@media (max-width:480px) {
+		width: 100%;
+		height: 70px;
 	}
 }
