--- a/source/style/common/slider.scss
+++ b/source/style/common/slider.scss
@@ -165,3 +165,75 @@
 .users__item--active {
 	border: 4px solid $accentColor;
 }
+
+
+// Медиа запросы
+
+@media (max-width:700px) {
+	.display {
+		margin-bottom: 0;
+	}
+	.display__list {
+		height: 360px;
+	}
+	.display__item {
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+	.diplay__photo {
+		width: 30%;
+		margin-bottom: 10px;
+	}
+	.display__info {
+		text-align: center;
+	}
+	.users {
+		width: 100%;
+	}
+
+	.users__item {
+		width: 20px;
+		height: 20px;
+		border: none;
+		background: $accentColor;
+		opacity: 0.5;
+		transition: all .2s linear;
+		img {
+			display: none;
+		}
+		&:hover {
+			opacity: 0.7;
+		}
+	}
+	.users__item--active {
+		opacity: 1;
+	}
+}
+
+@media (max-width: 480px) {
+	.slider__display {
+		width: 100%;
+	}
+	.slider__controls {
+		height: 100px;
+	}
+	.slider__prev, .slider__next {
+		width: 40px;
+		height: 40px;
+		border-width: 3px;
+		.icon--arrow {
+			width: 18px;
+			height: 18px;
+		}
+	}
+	.display__list {
+		height: 400px;
+	}
+	.display__photo {
+		width: 40%;
+	}
+	.display__info {
+		width: 100%;
+	}
+}
