--- a/source/style/common/timer.scss
+++ b/source/style/common/timer.scss
@@ -72,3 +72,16 @@
 		transform: translateX(0%);
 	}
 }
+
+@media (max-width: 700px) {
+	.timer__block {
+		text-align: center;
+	}
+	.timer__counter {
+		font-size: 15px;
+		line-height: 1.1;
+		strong {
+			font-size: 20px;
+		}
+	}
+}
