--- a/source/style/section/about.scss
+++ b/source/style/section/about.scss
@@ -22,25 +22,25 @@
 .about__item {
 	position: relative;
 	overflow: hidden;
+	width: 32%;
 	@extend .trs;
-	height: 250px;
 	&:before {
 		content: "";
 		display: block;
 		width: 100%;
-		height: 100%;
 		background-image: linear-gradient(to bottom, $mainColor, $accentColor);
 		opacity: 0.8;
 		position: absolute;
+		top: 0;
 		bottom: 100%;
 		left: 0;
 		@extend .trs;
 	}
 	&:hover {
-		transform: translate(-10px, -10px);
+		transform: translate(-10px, 10px);
 		box-shadow: 10px 10px 0px 0px rgba(149,225,211,1);
 		&:before {
-			bottom: 0%;
+			bottom: 0;
 		}
 		.about__info {
 			opacity: 1;
@@ -48,8 +48,10 @@
 	}
 }
 
-.about__image {
+.about__img {
 	max-width: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .about__info {
@@ -73,4 +75,54 @@
 	font-size: 18px;
 	font-family: $boldFont;
 	color: white;
+}
+
+
+// Медиа запросы
+
+@media (max-width: 960px) {
+	.about {
+		padding: 70px 0;
+	}
+	.about__title {
+		margin-bottom: 30px;
+	}
+	.about__text {
+		margin-bottom: 60px;
+		font-size: 16px;
+	}
+	.about__icon {
+		margin-bottom: 5px;
+		.icon--creative {
+			width: 20px;
+			height: 20px;
+		}
+	}
+	.about__descr {
+		font-size: 16px;
+		width: 100%;
+		display: block;
+	}
+}
+
+@media (max-width: 700px) {
+	.about__list {
+		flex-direction: column;
+	}
+	.about__item {
+		width: 80%;
+		margin: 0 auto 30px;
+	}
+	.about__icon {
+		margin-bottom: 10px;
+		.icon--creative {
+			width: 40px;
+			height: 40px;
+		}
+	}
+	.about__descr {
+		font-size: 25px;
+		width: 100%;
+		display: block;
+	}
 }
