--- a/source/style/section/comment.scss
+++ b/source/style/section/comment.scss
@@ -6,3 +6,17 @@
 	text-align: center;
 	margin-bottom: 70px;
 }
+
+// Медиа запросы 
+
+@media (max-width: 960px) {
+	.comment {
+		padding: 90px 0;
+	}
+}
+
+@media (max-width: 480px) {
+	.comment {
+		padding: 70px 0;
+	}
+}
